- Would it be possible to clear the Search box when returning to the Home screen?


v0.?
- Settings page and filmography page are now translatable.
- Added no image available image when no image is available for a movie or actor
- Fixed the images on the cast "preview" page.
- Added Cache folder for the cached items.
- Fixed the bug that when movie does not have a cover not all movie information is shown.
- Added movie covers on filmography (movies of actor) page. 
- Added missing android pictures on movie page.

v0.7.6 - Changelog
- Fixed the QVGA support.

v0.7.5 - Changelog
- Fixed the "Cannot convert integer to string" error.
- Popup "Changing Skins will require a restart of the application" in settings menu was always popping up after save. now only when skin is changed.
- Added languages (Czech, Dutch, French, German)
- Added runtime on movie page.
- Add "Big image feature" as setting. This will put bigger images on the movie and actor page.
- Fixed the image not downloading for Movie page after browsing through a couple of pages.

v0.7 - Changelog
- Interaction with HTTP is now rewritten. Hopefully will remove all ObjectDisposedExceptions.
- Added GZip Compression. Should be faster on slower connections.
- Added "Recent Searches"
- Added skinning support. Two themes installed by default
- Added finger-friendly "pressed" state for buttons.
- Added simple data caching
- Reduced memory footprint
- Fixed TV episodes. Lists episodes by season, episode air date & click-through for more details on each episode
- Fixed person filmography - now lists all roles as Director, Producer, Actor, Self, etc.
- Fixed quotes display issues. Some quotes still get cut off...still looking into this
- Fixed some localisation bugs
- Fixed settings dialog
- Changed all icons to better quality ones and got rid of the nasty pixelated fader at the top. Icons now use alpha transparency & fader is native GDI code.
- Animated loading screen