@@ -1,0 +1,137 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Translation>
+  <Name English="Español"></Name>
+  <Phrases>
+    <Phrase English="Loading Actor Info" ID="0001"><![CDATA[Cargando Información del actor]]></Phrase>
+    <Phrase English="Please Wait" ID="0002"><![CDATA[Por favor espere]]></Phrase>
+    <!--Context: "Bio" / Biography -->
+    <Phrase English="Bio" ID="0003"><![CDATA[Bio]]></Phrase>
+    <Phrase English="Filmography" ID="0004"><![CDATA[Filmografía]]></Phrase>
+    <Phrase English="Trivia" ID="0005"><![CDATA[Trivia]]></Phrase>
+    <Phrase English="Home" ID="0006"><![CDATA[Inicio]]></Phrase>
+    <Phrase English="Back" ID="0007"><![CDATA[Atrás]]></Phrase>
+    <Phrase English="Actor" ID="0008"><![CDATA[Actor]]></Phrase>
+    <Phrase English="Actor Details" ID="0009"><![CDATA[Detalles del actor]]></Phrase>
+    <Phrase English="Loading Cast" ID="0010"><![CDATA[Cargando Elenco]]></Phrase>
+    <Phrase English="There is no Cast available for this title" ID="0011"><![CDATA[No hay elenco disponible para este título]]></Phrase>
+    <Phrase English="Cast" ID="0012"><![CDATA[Elenco]]></Phrase>
+    <Phrase English="Loading Coming Soon" ID="0013"><![CDATA[Cargando Próximamente]]></Phrase>
+    <Phrase English="There are no titles in the Coming Soon section" ID="0014"><![CDATA[No hay títulos en la sección Próximamente]]></Phrase>
+    <Phrase English="Coming Soon" ID="0015"><![CDATA[Próximamente]]></Phrase>
+    <Phrase English="Air Date" ID="0016"><![CDATA[Estreno]]></Phrase>
+    <Phrase English="Episode List" ID="0017"><![CDATA[Lista de episodios]]></Phrase>
+    <Phrase English="Loading Filmography" ID="0018"><![CDATA[Cargando Filmografía]]></Phrase>
+    <!--Context: Samuel L. Jackson "as" himself -->
+    <Phrase English="as" ID="0019"><![CDATA[como]]></Phrase>
+    <Phrase English="Filmography" ID="0020"><![CDATA[Filmografía]]></Phrase>
+    <Phrase English="Error connecting to IMDb" ID="0021"><![CDATA[Error al conectarse a IMDb]]></Phrase>
+    <Phrase English="No results found" ID="0022"><![CDATA[No se encontraron resultados]]></Phrase>
+    <Phrase English="Known For" ID="0023"><![CDATA[Conocido por]]></Phrase>
+    <Phrase English="Movie" ID="0024"><![CDATA[Película]]></Phrase>
+    <Phrase English="TV Series" ID="0025"><![CDATA[Serie de TV]]></Phrase>
+    <Phrase English="Video Game" ID="0026"><![CDATA[video juego]]></Phrase>
+    <Phrase English="Searching IMDb" ID="0027"><![CDATA[Buscando en IMDb]]></Phrase>
+    <Phrase English="Top 250" ID="0028"><![CDATA[Mejores 250]]></Phrase>
+    <Phrase English="Coming Soon" ID="0029"><![CDATA[Próximamente]]></Phrase>
+    <Phrase English="Settings" ID="0030"><![CDATA[Configuración]]></Phrase>
+    <Phrase English="Exit" ID="0031"><![CDATA[Salir]]></Phrase>
+    <Phrase English="IMDb Mobile" ID="0032"><![CDATA[IMDb Mobile]]></Phrase>
+    <Phrase English="Loading Goofs" ID="0033"><![CDATA[Cargando Tonterías]]></Phrase>
+    <Phrase English="Continuity" ID="0034"><![CDATA[Continuidad]]></Phrase>
+    <Phrase English="Crew or equipment visible" ID="0035"><![CDATA[Equipo o equipamiento visible]]></Phrase>
+    <Phrase English="Factual errors" ID="0036"><![CDATA[Errores en hechos]]></Phrase>
+    <Phrase English="Incorrectly regarded as goofs" ID="0037"><![CDATA[Incorrectamente considerados como tonterías]]></Phrase>
+    <Phrase English="Plot holes" ID="0038"><![CDATA[Agujeros en la trama]]></Phrase>
+    <Phrase English="Revealing mistakes" ID="0039"><![CDATA[Revelando errores]]></Phrase>
+    <Phrase English="Miscellaneous" ID="0040"><![CDATA[Misceláneo]]></Phrase>
+    <Phrase English="There are no Goofs available for this title" ID="0041"><![CDATA[No hay tonterías disponibles para este título]]></Phrase>
+    <Phrase English="Goofs" ID="0042"><![CDATA[Tonterías]]></Phrase>
+    <Phrase English="Plot" ID="0043"><![CDATA[Trama]]></Phrase>
+    <Phrase English="Photos" ID="0044"><![CDATA[Fotos]]></Phrase>
+    <Phrase English="Trailers" ID="0045"><![CDATA[Avances cortos]]></Phrase>
+    <Phrase English="Quotes" ID="0046"><![CDATA[Citas]]></Phrase>
+    <Phrase English="Episodes" ID="0047"><![CDATA[Episodios]]></Phrase>
+    <Phrase English="Loading Thumbnails" ID="0048"><![CDATA[Cargando Imágenes miniatura]]></Phrase>
+    <!-- Context: "Page" 1 of 9 -->
+    <Phrase English="Page" ID="0049"><![CDATA[Página]]></Phrase>
+    <!-- Context: Page 1 "of" 9 -->
+    <Phrase English="of" ID="0050"><![CDATA[de]]></Phrase>
+    <Phrase English="There are no Photos available for this title" ID="0051"><![CDATA[No hay fotografías disponibles para este título]]></Phrase>
+    <Phrase English="Photo Viewer" ID="0052"><![CDATA[Visor de fotografías]]></Phrase>
+    <Phrase English="Loading Quotes" ID="0053"><![CDATA[Cargando Citas]]></Phrase>
+    <Phrase English="There are no Quotes available for this title" ID="0054"><![CDATA[No hay citas disponibles para este título]]></Phrase>
+    <Phrase English="Loading Episode List" ID="0055"><![CDATA[Cargando Lista de episodios]]></Phrase>
+    <Phrase English="Season List" ID="0056"><![CDATA[Lista de temporadas]]></Phrase>
+    <Phrase English="No Video Player has been selected. If you do this, you will not be able to view Trailers. Are you sure you want to do this?" ID="0057"><![CDATA[No ha seleccionado un visor de videos. Si no selecciona uno no podrá ver los avances cortos. ¿Está seguro que es lo quiere hacer?]]></Phrase>
+    <Phrase English="The path to the Custom Video Player does not exist. Do you want to change it?" ID="0058"><![CDATA[La ruta a el visor de videos no existe. ¿Desea cambiarla?]]></Phrase>
+    <Phrase English="Could not find CorePlayer on your phone. If you are sure it is installed, please select the 'Custom Video Player' option and enter the location of player.exe" ID="0059"><![CDATA[No se encontró el COrePlayer en el dispositivo. Si lo tiene instalado, por favor seleccione 'Visor de video personalizado' y brinde la ubicación de player.exe]]></Phrase>
+    <Phrase English="Save" ID="0060"><![CDATA[Guardar]]></Phrase>
+    <Phrase English="Cancel" ID="0061"><![CDATA[Cancelar]]></Phrase>
+    <Phrase English="IMDb Language" ID="0062"><![CDATA[Idioma de IMDb]]></Phrase>
+    <Phrase English="Download Thumbnails?" ID="0063"><![CDATA[¿Descargar imágenes miniatura?]]></Phrase>
+    <Phrase English="Default Video Player" ID="0064"><![CDATA[Visor de video predeterminado]]></Phrase>
+    <Phrase English="Custom Video Player" ID="0065"><![CDATA[Visor de video personalizado]]></Phrase>
+    <Phrase English="Command Line Arguments" ID="0066"><![CDATA[Argumentos de línea de comandos]]></Phrase>
+    <Phrase English="Download Images To" ID="0067"><![CDATA[Descargar imágenes a]]></Phrase>
+    <Phrase English="Loading Top 250" ID="0068"><![CDATA[Cargando Mejores 250]]></Phrase>
+    <Phrase English="Votes" ID="0069"><![CDATA[Votos]]></Phrase>
+    <!-- Context: "Watch Trailer (Low Resolution)" -->
+    <Phrase English="EDGE" ID="0070"><![CDATA[EDGE]]></Phrase>
+    <!-- Context: "Watch Trailer (High Resolution)" -->
+    <Phrase English="ThreeG" ID="0071"><![CDATA[3G]]></Phrase>
+    <Phrase English="There are no Trailers available for this title" ID="0072"><![CDATA[No hay avances cortos disponibles para este título]]></Phrase>
+    <Phrase English="Downloading Trailer Info" ID="0073"><![CDATA[Descargando Información de avances cortos]]></Phrase>
+    <Phrase English="Loading Trivia" ID="0074"><![CDATA[Loading Trivia]]></Phrase>
+    <Phrase English="Loading Actor Trivia" ID="0075"><![CDATA[Cargando Trivia de actores]]></Phrase>
+    <Phrase English="Loading Movie Trivia" ID="0076"><![CDATA[Cargando Trivia de películas]]></Phrase>
+    <Phrase English="There is no Trivia available for this actor" ID="0077"><![CDATA[NO hay trivias disponibles para este actor]]></Phrase>
+    <Phrase English="There is no Trivia available for this title" ID="0078"><![CDATA[No hay trivias disponibles para esta película]]></Phrase>
+    <Phrase English="An error has occurred" ID="0079"><![CDATA[Ha ocurrido un error]]></Phrase>
+    <Phrase English="Search For" ID="0080"><![CDATA[Buscar]]></Phrase>
+    <Phrase English="Real Name" ID="0081"><![CDATA[NOmbre verdadero]]></Phrase>
+    <Phrase English="Birthday" ID="0082"><![CDATA[Cumpleaños]]></Phrase>
+    <Phrase English="Directed By" ID="0083"><![CDATA[Dirigida por]]></Phrase>
+    <Phrase English="Written By" ID="0084"><![CDATA[Escrita por]]></Phrase>
+    <Phrase English="Genres" ID="0085"><![CDATA[Géneros]]></Phrase>
+    <Phrase English="Certificate" ID="0086"><![CDATA[Certificado]]></Phrase>
+    <Phrase English="Stage" ID="0087"><![CDATA[Escenario]]></Phrase>
+    <Phrase English="Loading Movie Info" ID="0088"><![CDATA[Cargando Información de la película]]></Phrase>
+    <Phrase English="About" ID="0089"><![CDATA[Créditos]]></Phrase>
+    <Phrase English="User Reviews" ID="0090"><![CDATA[Opiniones de usuarios]]></Phrase>
+    <Phrase English="External Reviews" ID="0091"><![CDATA[Opiniones externas]]></Phrase>
+    <Phrase English="Parental Guide" ID="0092"><![CDATA[Guía para padres]]></Phrase>
+    <Phrase English="Loading Parental Guide" ID="0093"><![CDATA[Cargando Guía para padres]]></Phrase>
+    <Phrase English="Loading External Reviews" ID="0094"><![CDATA[Cargando Opiniones externas]]></Phrase>
+    <Phrase English="Loading User Reviews" ID="0095"><![CDATA[Cargando Opiniones de usuarios]]></Phrase>
+    <Phrase English="HD 480p" ID="0096"><![CDATA[HD 480p]]></Phrase>
+    <Phrase English="HD 720p" ID="0097"><![CDATA[HD 720p]]></Phrase>
+    <Phrase English="There are no User Reviews for this title" ID="0098"><![CDATA[No hay revisiones de usuarios disponibles para este título]]></Phrase>
+    <Phrase English="Full Cast" ID="0099"><![CDATA[Elenco completo]]></Phrase>
+    <Phrase English="Recent Searches" ID="0100"><![CDATA[Búsquedas recientes]]></Phrase>
+    <Phrase English="Runtime" ID="0101"><![CDATA[Duración]]></Phrase>
+    <Phrase English="Minutes" ID="0102"><![CDATA[Minutos]]></Phrase>
+    <Phrase English="Use Big Images" ID="0103"><![CDATA[Usar imágenes grandes]]></Phrase>
+    <Phrase English="Skin" ID="0104"><![CDATA[Piel]]></Phrase>
+    <Phrase English="Use Animations (BETA)" ID="0105"><![CDATA[Usar animaciones (BETA)]]></Phrase>
+    <Phrase English="Enable GZip Compression" ID="0106"><![CDATA[Habilitar compresión GZip]]></Phrase>
+    <Phrase English="Download Thumbnails" ID="0107"><![CDATA[Descargar imágenes miniatura]]></Phrase>
+    <Phrase English="Thumbnail Cache Path" ID="0108"><![CDATA[Ruta del caché de imágenes miniatura]]></Phrase>
+    <Phrase English="Custom Video Player" ID="0109"><![CDATA[Visor de video personalizado]]></Phrase>
+    <Phrase English="Video Player" ID="0110"><![CDATA[Visor de video]]></Phrase>
+    <Phrase English="IMDb Mobile Language" ID="0111"><![CDATA[Idioma de IMDb Mobile]]></Phrase>
+    <Phrase English="IMDb Locale" ID="0112"><![CDATA[Localización de IMDb]]></Phrase>
+    <Phrase English="Changing Skin or language will require a restart of the application" ID="0113"><![CDATA[Cambiar la piel o el idioma requerirá que reinicie la aplicación]]></Phrase>
+    <Phrase English="Producer" ID="0114"><![CDATA[Productor]]></Phrase>
+    <Phrase English="Director" ID="0115"><![CDATA[Director]]></Phrase>
+    <Phrase English="Actor" ID="0116"><![CDATA[Actor]]></Phrase>
+    <Phrase English="Actress" ID="0117"><![CDATA[Actriz]]></Phrase>
+    <Phrase English="Writer" ID="0118"><![CDATA[Escritor]]></Phrase>
+    <Phrase English="Thanks" ID="0119"><![CDATA[Gracias]]></Phrase>
+    <Phrase English="Self" ID="0120"><![CDATA[Sí mismo]]></Phrase>
+    <Phrase English="Soundtrack" ID="0121"><![CDATA[Banda sonora]]></Phrase>
+    <Phrase English="Bottom 100" ID="0122"><![CDATA[Peores 100]]></Phrase>
+    <Phrase English="Music Department" ID="0123"><![CDATA[Music Department]]></Phrase>
+    <Phrase English="Miscellaneous Crew" ID="0124"><![CDATA[Miscellaneous Crew]]></Phrase>
+  </Phrases>
+  <!--Traducido por: aaamador at XDA-Developers -->
+</Translation>
